se trabajo el responsive del form y aspectos del nav

--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
                   <li class="nav-item">
                      <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
                   </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="pages/contacto.html">Contactanos</a>
+                  </li>
                </ul>
                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                  <input class="form-control m-1" type="search" placeholder="Buscar" aria-label="Search">
                   <button class="btn" type="submit">Buscar</button>
                </form>
             </div>
