--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -129,7 +129,7 @@
             </div>
          </div>
       </section>
-      
+
       <!-- WHATSAPP -->
 
       <div class="fixed">
@@ -137,26 +137,15 @@
       </div>
 
       <!-- FOOTER -->
+
       <footer>
          <div class="logo">
-            <img src="../img/logo.png" width="30px" alt="logo">
+            <img src="../img/logo.png" width="30px" height="35px" alt="logo">
             <h6>Gala<span>XY</span> </h6>
+
          </div>
+
          <div class="footer-container">
-            <ul>
-               <li>
-                  <a href="../index.html">Inicio</a>
-               </li>
-               <li>
-                  <a href="nosotros.html">Sobre nosotros</a>
-               </li>
-               <li>
-                  <a href="productos.html">Productos</a>
-               </li>
-               <li>
-                  <a href="contacto.html">Contacto</a>
-               </li>
-            </ul>
             <div class="iconos">
                <a href="https://www.facebook.com" target="_blank">
                   <img src="../img/facebook.png" width="50px" alt="Facebook">
@@ -169,11 +158,13 @@
                </a>
             </div>
          </div>
-
          <!-- DERECHOS DE AUTOR -->
 
          <p>&copy Copyright - Galaxy 2023</p>
       </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+         crossorigin="anonymous"></script>
    </body>
 
 </html>
