--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -167,7 +167,7 @@
                 <p class="card-text">Llega gratis mañana</p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">$12.424</li>
+                <li class="list-group-item">$222.424</li>
             </ul>
             <div class="card-body">
                 <a href="#" class="card-link">Comprar</a>
@@ -183,7 +183,7 @@
                 <p class="card-text">Llega gratis mañana</p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">$12.539</li>
+                <li class="list-group-item">$25.539</li>
             </ul>
             <div class="card-body">
                 <a href="#" class="card-link">Comprar</a>
@@ -193,13 +193,13 @@
         <div class="card">
             <img src="../img/consola_009.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Mini Consola Arcade Retro Stick Hd Hdmi Joysticks 64gb Caja
+                <h5 class="card-title">Nintendo Switch Platinum 128gb Limited Edition
 
                 </h5>
                 <p class="card-text">Llega gratis mañana</p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">$15.267</li>
+                <li class="list-group-item">$255.267</li>
             </ul>
             <div class="card-body">
                 <a href="#" class="card-link">Comprar</a>
