--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
    <section>
       <h2>PRODUCTOS DESTACADOS</h2>
-      <section class="productos__dropdown">
+      <section class="productos">
          <div class="card">
             <img src="./img/play4-mando.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -169,7 +169,7 @@
       <div class="popular">
          <h2>LOS MAS VENDIDOS</h2>
          <p>Los que mas eligen nuestros clientes</p>
-         <div class="productos__dropdown">
+         <div class="productos">
             <div class="card">
                <img src="./img/joystick_006.jpg" class="card-img-top" alt="...">
                <div class="card-body">
