--- a/pages/joysticks.html
+++ b/pages/joysticks.html
@@ -67,7 +67,7 @@
 
     <!-- PRODUCTOS DESTACADOS -->
 
-    <section class="productos__dropdown">
+    <section class="productos">
         <div class="card">
             <img src="../img/play4-mando.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -235,7 +235,7 @@
 
     <main>
         <h2>Tambien te puede interesar</h2>
-        <section class="productos__dropdown">
+        <section class="productos">
             <div class="card">
                 <img src="../img/juego_001.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
