--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -67,7 +67,7 @@
 
     <!-- PRODUCTOS DESTACADOS -->
 
-    <section class="productos__dropdown">
+    <section class="productos">
         <div class="card">
             <img src="../img/juego_001.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -240,7 +240,7 @@
 
     <main>
         <h2>Tambien te puede interesar</h2>
-        <div class="productos__dropdown">
+        <div class="productos">
             <div class="card">
                 <img src="../img/joystick_004.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
