se agregaron animacion, mixins, extens y se modifico el index

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>GalaXY</title>
-   <link rel="shortcut icon" href="./img/logo.png">
+   <meta name="keywords"
+      content="juegos, consolas, tecnología gamer, gadgets gaming, tienda gamer, comprar juegos online, accesorios gaming, consolas de última generación, ofertas de juegos, experiencia gamer, entretenimiento tecnológico, equipamiento gaming, videojuegos, novedades gamer, acceso a avances tecnológicos">
+   <meta name="description"
+      content="En Galaxy, nos apasiona el gaming y la tecnología. Descubre un universo de posibilidades con nuestras consolas, juegos y gadgets. Encuentra productos innovadores que te sumergirán en la experiencia gamer definitiva.">
+   <meta title="Explora el Universo Gamer en Galaxy: Consolas, Juegos y Más">
+   <link rel="icon" href="./img/favicon.png" type="image/x-icon">
+   <link rel="stylesheet" href="./css/estilos.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-      
-   <link rel="stylesheet" href="./css/style.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+   <!-- <link rel="stylesheet" href="./css/style.css"> -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
@@ -68,27 +74,34 @@
 
    <!-- HERO SECTION -->
    <main>
+
       <section class="hero">
+
          <div class="novedad">
             <div class="img-novedad">
-               <img src="./img/nintendo.png" width="600px" alt="Producto destacado">
+               <img class="animate__animated animate__pulse" src="./img/nintendo.png" width="600px"
+                  alt="Producto destacado">
             </div>
-            <h3>¡Nintendo Switch 30% OFF!</h3>
+            <h3 class="animate__animated animate__pulse">¡Nintendo Switch 10% OFF!</h3>
             <br>
-            <a href="./pages/consolas.html">COMPRAR AHORA</a>
+            <a class="boton" href="./pages/consolas.html">COMPRAR AHORA</a>
          </div>
+
          <!-- SUSCRIBIRSE -->
          <div class="container-1">
             <div class="suscribir">
-               <p>SUSCRIBITE PARA RECIBIR NOVEDADES!</p>
+               <p>Suscribite para recibir novedades</p>
                <br>
-               <a href="pages/login.html">SUSCRÍBIRSE</a>
+               <a class="boton" href="pages/login.html">SUSCRÍBIRSE</a>
             </div>
             <div class="presentacion__parrafo">
-               <p>¡Bienvenidos a Galaxy la ecommerce gamer! <br> En Galaxy, nos enorgullece ofrecer una amplia selección
+               <p class="welcome">¡Bienvenidos a Galaxy la ecommerce gamer!<br>
+               </p>
+               <p>Galaxy, nos enorgullece ofrecer una amplia selección
                   de
                   consolas,
-                  juegos, gadgets y mucho más. Nos apasiona la tecnología y creemos que todos deberían tener acceso a
+                  juegos, gadgets y mucho más. <br> Nos apasiona la tecnología y creemos que todos deberían tener acceso
+                  a
                   los
                   últimos
                   avances y productos innovadores.
@@ -248,33 +261,6 @@
       </ul>
    </div>
    </div>
-   </section>
-
-   <!-- RESEÑAS CLIENTES -->
-
-   <section>
-      <div class="review">
-         <h2>RESEÑAS DE CLIENTES</h2>
-         <p>"Recientemente adquirí un joystick en esta tienda y estoy encantado con mi experiencia de compra. Desde el
-            momento en que ingresé al sitio web, encontré una amplia variedad de productos de alta calidad para elegir.
-            El proceso de compra fue rápido y sencillo, y la atención al cliente fue excepcional. Los representantes se
-            mostraron amables y conocedores, respondiendo todas mis preguntas y brindándome recomendaciones
-            personalizadas."</p>
-         <br>
-         <img src="./img/clasificacion.png" width="100px" alt="reseña">
-         <p>"El producto que compré superó mis expectativas. La calidad es excelente y ha mejorado significativamente mi
-            experiencia de juego. Los detalles y el rendimiento son excepcionales.
-            Además, el tiempo de entrega fue sorprendentemente rápido. Recibí mi pedido en menos de 48 horas, lo cual
-            fue una grata sorpresa."
-         </p>
-         <br>
-         <img src="./img/clasificacion.png" width="100px" alt="reseña">
-         <p>"Recomendaría esta tienda a cualquier aficionado al gaming en Buenos Aires. Su amplia selección de
-            productos, atención al cliente excepcional y entrega rápida hacen de esta tienda una opción inmejorable para
-            los gamers exigentes."</p>
-         <br>
-         <img src="./img/clasificacion.png" width="100px" alt="reseña">
-      </div>
    </section>
    </main>
 
