--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,9 @@
    <link rel="shortcut icon" href="../img/logo.png">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-   <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/estilos.css">
+   <!-- <link rel="stylesheet" href="../css/style.css"> -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
@@ -66,11 +68,11 @@
    </header>
 
    <body>
-      <section class="contacto_css">
-         <div class="contact_form">
+      <section class="contacto_css" >
+         <div class="contact_form" >
 
-            <div class="formulario">
-               <h1>Formulario de contacto</h1>
+            <div class="formulario" >
+               <h1 class="animate__animated animate__zoomInUp">Formulario de contacto</h1>
                <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
                <form action="submeter-formulario.php" method="post">
                   <p>
