--- a/pages/login.html
+++ b/pages/login.html
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" href="../img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
@@ -65,12 +67,12 @@
         </nav>
     </header>
 
-   <!--  INICIAR SESION -->
+    <!--  INICIAR SESION -->
 
     <body>
         <div class="signupFrm">
             <form action="" class="form">
-                <h1 class="title">Iniciar sesion</h1>
+                <h1 class="animate__animated animate__slideInDown" class="title" >Iniciar sesion</h1>
 
                 <div class="inputContainer">
                     <input type="text" class="input" placeholder="a">
@@ -95,7 +97,7 @@
                 <input type="submit" class="submitBtn" value="Iniciar">
             </form>
         </div>
-        
+
         <!-- FOOTER -->
 
         <footer>
