--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,7 +8,8 @@
    <link rel="shortcut icon" href="../img/logo.png">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-   <link rel="stylesheet" href="../css/style.css">
+   <link rel="stylesheet" href="../css/estilos.css">
+   <!-- <link rel="stylesheet" href="../css/style.css"> -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
@@ -67,7 +68,12 @@
 
    <main>
       <section>
+
          <div class="nosotros">
+            <div class="titulo">
+               <H4>Quienes somos</H4>
+            </div>
+            <div class="parrafo">
             <p>Nuestro equipo está compuesto por entusiastas de los videojuegos que conocen la importancia de encontrar
                el equipo adecuado para cada jugador. Ya seas un veterano experimentado o un novato curioso, estamos aquí
                para ayudarte a encontrar los dispositivos y juegos que se ajusten a tus preferencias y estilo de juego.
@@ -88,15 +94,20 @@
                y la filosofía específica de tu tienda. Además, asegúrate de incluir información relevante sobre la
                historia de la tienda, su misión y visión, y cualquier otro detalle que consideres importante para
                conectar con tus clientes potenciales.</p>
+            </div>
          </div>
+         <h2>¿DONDE ESTAMOS?</h2>
          <div class="mapa">
             <iframe
                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1381.8014956297045!2d-58.562529482106314!3d-34.54098640456464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcba05bbf0c2d1%3A0xc403f38bdf4fd791!2sBasquet%20Plaza%20Mitre!5e0!3m2!1ses-419!2sar!4v1688437616841!5m2!1ses-419!2sar"
-               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+               width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                referrerpolicy="no-referrer-when-downgrade"></iframe>
          </div>
       </section>
    </main>
+
+   <!-- WHATSAPP -->
+
    <div class="fixed">
       <a href=""><img src="../img/wasap.png" alt="whatsapp"></a>
    </div>
