cambios en botones

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
             <div class="suscribir">
                <p>Suscribite para recibir novedades</p>
                <br>
-               <a class="boton" href="pages/login.html">SUSCRÍBIRSE</a>
+               <a class="boton" href="pages/login.html">SUSCRIBIRME!</a>
             </div>
             <div class="presentacion__parrafo">
-               <p class="welcome">¡Bienvenidos a Galaxy la ecommerce gamer!<br>
+               <p class="welcome">¡Bienvenidos a Galaxy, la tienda de productos gamer!<br>
                </p>
-               <p>Galaxy, nos enorgullece ofrecer una amplia selección
+               <p>Galaxy se enorgullece de ofrecer una amplia selección
                   de
                   consolas,
                   juegos, gadgets y mucho más. <br> Nos apasiona la tecnología y creemos que todos deberían tener acceso
@@ -105,6 +105,7 @@
                   los
                   últimos
                   avances y productos innovadores.
+               </p>
             </div>
             </p>
          </div>
@@ -115,9 +116,9 @@
 
    <section>
       <h2>PRODUCTOS DESTACADOS</h2>
-      <section class="productos">
+      <div class="productos">
          <div class="card">
-            <img src="./img/play4-mando.jpg" class="card-img-top" alt="...">
+            <img src="./img/play4-mando.jpg" class="card-img-top" alt="play4-mando">
             <div class="card-body">
                <h5 class="card-title">Joystick inalámbrico Sony PlayStation Dualshock 4 berry blue</h5>
                <p class="card-text">
@@ -132,7 +133,7 @@
             </div>
          </div>
          <div class="card">
-            <img src="./img/nintendo-mando.jpg" class="card-img-top" alt="...">
+            <img src="./img/nintendo-mando.jpg" class="card-img-top" alt="nintendo-mando">
             <div class="card-body">
                <h5 class="card-title">Set de Joystick inalámbrico Nintendo Switch Joy-Con (L)/(R) rojo neón y azul</h5>
                <p class="card-text">
@@ -147,7 +148,7 @@
             </div>
          </div>
          <div class="card">
-            <img src="./img/mando-play5.jpg" class="card-img-top" alt="...">
+            <img src="./img/mando-play5.jpg" class="card-img-top" alt="mando-play5">
             <div class="card-body">
                <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1 cosmic red</h5>
                <p class="card-text">Llega gratis mañana</p>
@@ -161,7 +162,7 @@
             </div>
          </div>
          <div class="card">
-            <img src="./img/negro.jpg" class="card-img-top" alt="...">
+            <img src="./img/negro.jpg" class="card-img-top" alt="mando--xbox--colornegro">
             <div class="card-body">
                <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
                <p class="card-text">Llega gratis mañana</p>
@@ -174,7 +175,7 @@
                <a href="#" class="card-link">Añadir al carro</a>
             </div>
          </div>
-      </section>
+      </div>
    </section>
 
    <!-- MAS VENDIDOS -->
@@ -185,7 +186,7 @@
          <p>Los que mas eligen nuestros clientes</p>
          <div class="productos">
             <div class="card">
-               <img src="./img/joystick_006.jpg" class="card-img-top" alt="...">
+               <img src="./img/joystick_006.jpg" class="card-img-top" alt="mando--play--dualsense">
                <div class="card-body">
                   <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1
                   </h5>
@@ -200,7 +201,7 @@
                </div>
             </div>
             <div class="card">
-               <img src="./img/juego_010.jpg" class="card-img-top" alt="...">
+               <img src="./img/juego_010.jpg" class="card-img-top" alt="red--dead2">
                <div class="card-body">
                   <h5 class="card-title">Red Dead Redemption 2 Standard Edition Rockstar Games PS4 Físico
                   </h5>
@@ -215,7 +216,7 @@
                </div>
             </div>
             <div class="card">
-               <img src="./img/consola_003.jpg" class="card-img-top" alt="...">
+               <img src="./img/consola_003.jpg" class="card-img-top" alt="play--2">
                <div class="card-body">
                   <h5 class="card-title">Ps2 Slim Matrix 32gb 2 Joystick</h5>
                   <p class="card-text">Llega gratis mañana</p>
@@ -229,7 +230,7 @@
                </div>
             </div>
             <div class="card">
-               <img src="./img/joystick_004.jpg" class="card-img-top" alt="...">
+               <img src="./img/joystick_004.jpg" class="card-img-top" alt="mando--redragon--saturn">
                <div class="card-body">
                   <h5 class="card-title">Joystick Redragon Saturn G807 negro
                   </h5>
@@ -267,7 +268,7 @@
    <!-- WHATSAPP -->
 
    <div class="fixed">
-      <a href=""><img src="./img/wasap.png" alt="whatsapp"></a>
+      <a href=""><img src="./img/wasap.png" alt="Botón de WhatsApp"></a>
    </div>
 
    <!-- FOOTER -->
