--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -70,7 +70,7 @@
 
     <section class="productos">
         <div class="card">
-            <img src="../img/consola_001.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_001.jpg" class="card-img-top" alt="play--3">
             <div class="card-body">
                 <h5 class="card-title">Sony PlayStation 3 Super Slim 500GB Standard color charcoal black
                 </h5>
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/consola_002.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_002.jpg" class="card-img-top" alt="xbox--360--arcade">
             <div class="card-body">
                 <h5 class="card-title">Microsoft Xbox 360 Arcade 512MB Standard color matte white
                 </h5>
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/consola_003.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_003.jpg" class="card-img-top" alt="play--2--slim">
             <div class="card-body">
                 <h5 class="card-title">Ps2 Slim Matrix 32gb 2 Joystick</h5>
                 <p class="card-text">Llega gratis mañana</p>
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/consola_004.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_004.jpg" class="card-img-top" alt="xbox--512gb">
             <div class="card-body">
                 <h5 class="card-title">Microsoft Xbox Series S 512GB Standard color blanco
                 </h5>
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/consola_005.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_005.jpg" class="card-img-top" alt="kanji--kj-pspx6">
             <div class="card-body">
                 <h5 class="card-title">Consola Kanji KJ-PSPX6 color negro
                 </h5>
@@ -146,7 +146,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/consola_006.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_006.jpg" class="card-img-top" alt="consola--alien">
             <div class="card-body">
                 <h5 class="card-title">Consola Alien FC Compact 30th Anniversary Edition color blanco y rojo
                 </h5>
@@ -161,7 +161,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/consola_007.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_007.jpg" class="card-img-top" alt="nintendo--switch--OLED">
             <div class="card-body">
                 <h5 class="card-title">Nintendo Switch OLED The Legend of Zelda: Tears of the Kingdom Edition - 64 GB
                 </h5>
@@ -176,7 +176,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/consola_008.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_008.jpg" class="card-img-top" alt="mini--consola--arcade--retro">
             <div class="card-body">
                 <h5 class="card-title">Mini Consola Arcade Retro Stick Hd Hdmi Joysticks 64gb Caja
 
@@ -192,7 +192,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/consola_009.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_009.jpg" class="card-img-top" alt="nintendo--switch--plat--128gb">
             <div class="card-body">
                 <h5 class="card-title">Nintendo Switch Platinum 128gb Limited Edition
 
@@ -208,7 +208,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/consola_010.jpg" class="card-img-top" alt="...">
+            <img src="../img/consola_010.jpg" class="card-img-top" alt="nintendo--switch--32gb">
             <div class="card-body">
                 <h5 class="card-title">Nintendo Switch Lite 32GB Standard color amarillo
                 </h5>
@@ -243,7 +243,7 @@
         <h2>Tambien te puede interesar</h2>
         <section class="productos">
             <div class="card">
-                <img src="../img/juego_001.jpg" class="card-img-top" alt="...">
+                <img src="../img/juego_001.jpg" class="card-img-top" alt="mortal--kombat11">
                 <div class="card-body">
                     <h5 class="card-title">Mortal Kombat 11 Ultimate Ultimate Edition - Físico - PS4
                     </h5>
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../img/juego_002.jpg" class="card-img-top" alt="...">
+                <img src="../img/juego_002.jpg" class="card-img-top" alt="forza6">
                 <div class="card-body">
                     <h5 class="card-title">Juego Forza Motorsport 6 Edicion 10 Aniversario Xbox One</h5>
                     <p class="card-text">
@@ -274,7 +274,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../img/juego_003.jpg" class="card-img-top" alt="...">
+                <img src="../img/juego_003.jpg" class="card-img-top" alt="GOW--standard">
                 <div class="card-body">
                     <h5 class="card-title">Gears of War Standard Edition Microsoft Xbox 360 Físico
                     </h5>
