--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -70,7 +70,7 @@
 
     <section class="productos">
         <div class="card">
-            <img src="../img/juego_001.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_001.jpg" class="card-img-top" alt="MK11">
             <div class="card-body">
                 <h5 class="card-title">Mortal Kombat 11 Ultimate Ultimate Edition - Físico - PS4
                 </h5>
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/juego_002.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_002.jpg" class="card-img-top" alt="forza6">
             <div class="card-body">
                 <h5 class="card-title">Juego Forza Motorsport 6 Edicion 10 Aniversario Xbox One</h5>
                 <p class="card-text">
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/juego_003.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_003.jpg" class="card-img-top" alt="GOW--standard">
             <div class="card-body">
                 <h5 class="card-title">Gears of War Standard Edition Microsoft Xbox 360 Físico
                 </h5>
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/juego_004.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_004.jpg" class="card-img-top" alt="fifa17">
             <div class="card-body">
                 <h5 class="card-title">Juego Xbox One Fifa 17 Original 2017
                 </h5>
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/juego_005.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_005.jpg" class="card-img-top" alt="Halo">
             <div class="card-body">
                 <h5 class="card-title">Juego Xbox One Halo Wars 2 Fisico Nuevo Sellado
                 </h5>
@@ -146,7 +146,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/juego_006.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_006.jpg" class="card-img-top" alt="rocket--league">
             <div class="card-body">
                 <h5 class="card-title">Rocket League Ultimate Edition Psyonix PS4 Físico
 
@@ -162,7 +162,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/juego_007.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_007.jpg" class="card-img-top" alt="nfs">
             <div class="card-body">
                 <h5 class="card-title">Need for Speed: Payback Standard Edition Electronic Arts PS4 Físico
 
@@ -178,7 +178,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/juego_008.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_008.jpg" class="card-img-top" alt="resident--evil">
             <div class="card-body">
                 <h5 class="card-title">Resident Evil Village Standard Edition Capcom PS4 Físico
                 </h5>
@@ -193,7 +193,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/juego_009.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_009.jpg" class="card-img-top" alt="fifa23">
             <div class="card-body">
                 <h5 class="card-title">FIFA 23 Standard Edition Electronic Arts PS4 Físico
                 </h5>
@@ -208,7 +208,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/juego_010.jpg" class="card-img-top" alt="...">
+            <img src="../img/juego_010.jpg" class="card-img-top" alt="red--dead2">
             <div class="card-body">
                 <h5 class="card-title">Red Dead Redemption 2 Standard Edition Rockstar Games PS4 Físico
                 </h5>
@@ -243,7 +243,7 @@
         <h2>Tambien te puede interesar</h2>
         <div class="productos">
             <div class="card">
-                <img src="../img/joystick_004.jpg" class="card-img-top" alt="...">
+                <img src="../img/joystick_004.jpg" class="card-img-top" alt="mando--redragon--saturn">
                 <div class="card-body">
                     <h5 class="card-title">Joystick Redragon Saturn G807 negro
                     </h5>
@@ -258,7 +258,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../img/joystick_005.jpg" class="card-img-top" alt="...">
+                <img src="../img/joystick_005.jpg" class="card-img-top" alt="mando--ps4">
                 <div class="card-body">
                     <h5 class="card-title">Joystick Inalámbrico PS4 para Sony PlayStation Dualshock 4
                     </h5>
@@ -273,7 +273,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../img/joystick_006.jpg" class="card-img-top" alt="...">
+                <img src="../img/joystick_006.jpg" class="card-img-top" alt="mando--play--dualsense">
                 <div class="card-body">
                     <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1
                     </h5>
