--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,7 +8,7 @@
    <link rel="shortcut icon" href="../img/logo.png">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-      <link rel="stylesheet" href="../css/estilos.css">
+   <link rel="stylesheet" href="../css/estilos.css">
    <!-- <link rel="stylesheet" href="../css/style.css"> -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
    <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,15 +69,24 @@
    <main>
       <section>
          <div class="grid_galeria">
-            <div class="img_galeria"><img src="../img/mando_play.jpg" class="animate__animated animate__fadeInLeft" alt=""></div>
-            <div class="img_galeria imagen_alta"><img src="../img/mando_xbox.jpg" class="animate__animated animate__fadeInUp"alt=""></div>
-            <div class="img_galeria"><img src="../img/mando_nintendo.jpg" class="animate__animated animate__fadeInRight" alt=""></div>
-            <div class="img_galeria logos"><img src="../img/play_logo.jpg" class="animate__animated animate__fadeInLeft"alt=""></div>
-            <div class="img_galeria"><img src="../img/xbox_logo.jpg" class="animate__animated animate__zoomIn"alt=""></div>
-            <div class="img_galeria"><img src="../img/nintendo_logo.jpg" class="animate__animated animate__fadeInRight"alt=""></div>
-            <div class="img_galeria"><img src="../img/play_juegos.jpg" class="animate__animated animate__fadeInLeft"alt=""></div>
-            <div class="img_galeria"><img src="../img/xbox_juegos.jpg" class="animate__animated animate__fadeInDown"alt=""></div>
-            <div class="img_galeria imagen_final"><img src="../img/juegos_nintendo.jpg" class="animate__animated animate__fadeInRight" alt=""></div>
+            <div class="img_galeria"><img src="../img/mando_play.jpg" class="animate__animated animate__fadeInLeft"
+                  alt="mando_play"></div>
+            <div class="img_galeria imagen_alta"><img src="../img/mando_xbox.jpg"
+                  class="animate__animated animate__fadeInUp" alt="mando_xbox"></div>
+            <div class="img_galeria"><img src="../img/mando_nintendo.jpg" class="animate__animated animate__fadeInRight"
+                  alt="mando_nintendo"></div>
+            <div class="img_galeria logos"><img src="../img/play_logo.jpg" class="animate__animated animate__fadeInLeft"
+                  alt="play_logo"></div>
+            <div class="img_galeria"><img src="../img/xbox_logo.jpg" class="animate__animated animate__zoomIn"
+                  alt="xbox_logo"></div>
+            <div class="img_galeria"><img src="../img/nintendo_logo.jpg" class="animate__animated animate__fadeInRight"
+                  alt="nintendo_logo"></div>
+            <div class="img_galeria"><img src="../img/play_juegos.jpg" class="animate__animated animate__fadeInLeft"
+                  alt="play_juegos"></div>
+            <div class="img_galeria"><img src="../img/xbox_juegos.jpg" class="animate__animated animate__fadeInDown"
+                  alt="xbox_juegos"></div>
+            <div class="img_galeria imagen_final"><img src="../img/juegos_nintendo.jpg"
+                  class="animate__animated animate__fadeInRight" alt="juegos_nintendo"></div>
          </div>
       </section>
    </main>
@@ -85,7 +94,7 @@
    <div class="fixed">
       <a href=""><img src="../img/wasap.png" alt="whatsapp"></a>
    </div>
-   
+
    <!-- FOOTER -->
 
    <footer>
