--- a/pages/joysticks.html
+++ b/pages/joysticks.html
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" href="../img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/estilos.css">
-        <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
@@ -70,7 +70,7 @@
 
     <section class="productos">
         <div class="card">
-            <img src="../img/play4-mando.jpg" class="card-img-top" alt="...">
+            <img src="../img/play4-mando.jpg" class="card-img-top" alt="play4-mando">
             <div class="card-body">
                 <h5 class="card-title">Joystick inalámbrico Sony PlayStation Dualshock 4 berry blue</h5>
                 <p class="card-text">
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/nintendo-mando.jpg" class="card-img-top" alt="...">
+            <img src="../img/nintendo-mando.jpg" class="card-img-top" alt="nintendo-mando">
             <div class="card-body">
                 <h5 class="card-title">Set de Joystick inalámbrico Nintendo Switch Joy-Con (L)/(R) rojo neón y azul</h5>
                 <p class="card-text">
@@ -100,7 +100,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/mando-play5.jpg" class="card-img-top" alt="...">
+            <img src="../img/mando-play5.jpg" class="card-img-top" alt="mando-play5">
             <div class="card-body">
                 <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1 cosmic red</h5>
                 <p class="card-text">Llega gratis mañana</p>
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/negro.jpg" class="card-img-top" alt="...">
+            <img src="../img/negro.jpg" class="card-img-top" alt="mando--xbox--negro">
             <div class="card-body">
                 <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
                 <p class="card-text">Llega gratis mañana</p>
@@ -128,7 +128,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/joystick_001.jpg" class="card-img-top" alt="...">
+            <img src="../img/joystick_001.jpg" class="card-img-top" alt="mando--redragon--Harrow">
             <div class="card-body">
                 <h5 class="card-title">Joystick inalámbrico Redragon Harrow G808 negro
                 </h5>
@@ -143,7 +143,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/joystick_002.jpg" class="card-img-top" alt="...">
+            <img src="../img/joystick_002.jpg" class="card-img-top" alt="mando--gamer--NETMAK">
             <div class="card-body">
                 <h5 class="card-title">Joystick Gamer Bluetooth Gamepad NETMAK 5 en 1
                 </h5>
@@ -158,7 +158,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/joystick_003.jpg" class="card-img-top" alt="...">
+            <img src="../img/joystick_003.jpg" class="card-img-top" alt="mando--noga">
             <div class="card-body">
                 <h5 class="card-title">Joystick Noganet NG-6000X negro y verde
                 </h5>
@@ -173,7 +173,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/joystick_004.jpg" class="card-img-top" alt="...">
+            <img src="../img/joystick_004.jpg" class="card-img-top" alt="mando--redragon">
             <div class="card-body">
                 <h5 class="card-title">Joystick Redragon Saturn G807 negro
                 </h5>
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/joystick_005.jpg" class="card-img-top" alt="...">
+            <img src="../img/joystick_005.jpg" class="card-img-top" alt="mando--ps4">
             <div class="card-body">
                 <h5 class="card-title">Joystick Inalámbrico PS4 para Sony PlayStation Dualshock 4
                 </h5>
@@ -203,7 +203,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../img/joystick_006.jpg" class="card-img-top" alt="...">
+            <img src="../img/joystick_006.jpg" class="card-img-top" alt="mando--play">
             <div class="card-body">
                 <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1
                 </h5>
@@ -238,7 +238,7 @@
         <h2>Tambien te puede interesar</h2>
         <section class="productos">
             <div class="card">
-                <img src="../img/juego_001.jpg" class="card-img-top" alt="...">
+                <img src="../img/juego_001.jpg" class="card-img-top" alt="mortal--kombat11">
                 <div class="card-body">
                     <h5 class="card-title">Mortal Kombat 11 Ultimate Ultimate Edition - Físico - PS4
                     </h5>
@@ -254,7 +254,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../img/juego_002.jpg" class="card-img-top" alt="...">
+                <img src="../img/juego_002.jpg" class="card-img-top" alt="Motorsport">
                 <div class="card-body">
                     <h5 class="card-title">Juego Forza Motorsport 6 Edicion 10 Aniversario Xbox One</h5>
                     <p class="card-text">
@@ -269,7 +269,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../img/juego_003.jpg" class="card-img-top" alt="...">
+                <img src="../img/juego_003.jpg" class="card-img-top" alt="Gears">
                 <div class="card-body">
                     <h5 class="card-title">Gears of War Standard Edition Microsoft Xbox 360 Físico
                     </h5>
