--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <nav class="navbar navbar-expand-lg">
          <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img class="logo" src="./img/logo-galaxy-ai.svg" alt="logo"></a>
+            <a class="navbar-brand" href="index.html"><img class="logo" src="./img/logo-galaxy-ai.svg" width="300px" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
