--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
    <div class="varios">
       <ul>
          <li>
-            <img src="./img/entrega-gratis.png" alt="entrega-gratis">
+            <a href=""><img src="./img/entrega-gratis.png" alt="entrega-gratis"></a>
          </li>
          <li>
             <img src="./img/segura.png" alt="compra-segura">
