--- a/index.html
+++ b/index.html
@@ -77,36 +77,40 @@
 
          <div class="novedad">
             <div class="img-novedad">
-               <img class="animate__animated animate__pulse" src="./img/nintendo.png" width="600px"
+               <img class="animate__animated animate__pulse" src="./img/nintendo.png" width="800px"
                   alt="Producto destacado">
             </div>
             <h3 class="animate__animated animate__pulse">¡Nintendo Switch 10% OFF!</h3>
             <br>
             <a class="boton" href="./pages/consolas.html">COMPRAR AHORA</a>
+
+
+            <!-- SUSCRIBIRSE -->
+            <div class="container-1">
+               <div class="suscribir">
+                  <p>Suscribite para recibir novedades</p>
+                  <br>
+                  <a class="boton" href="pages/login.html">SUSCRIBIRME!</a>
+               </div>
+               <div class="presentacion__parrafo">
+                  <p class="welcome">¡Bienvenidos a Galaxy, la tienda de productos gamer!<br>
+                  </p>
+                  <p>Galaxy se enorgullece de ofrecer una amplia selección
+                     de
+                     consolas,
+                     juegos, gadgets y mucho más. <br> Nos apasiona la tecnología y creemos que todos deberían tener
+                     acceso
+                     a
+                     los
+                     últimos
+                     avances y productos innovadores.
+                  </p>
+               </div>
+               </p>
+            </div>
          </div>
 
-         <!-- SUSCRIBIRSE -->
-         <div class="container-1">
-            <div class="suscribir">
-               <p>Suscribite para recibir novedades</p>
-               <br>
-               <a class="boton" href="pages/login.html">SUSCRIBIRME!</a>
-            </div>
-            <div class="presentacion__parrafo">
-               <p class="welcome">¡Bienvenidos a Galaxy, la tienda de productos gamer!<br>
-               </p>
-               <p>Galaxy se enorgullece de ofrecer una amplia selección
-                  de
-                  consolas,
-                  juegos, gadgets y mucho más. <br> Nos apasiona la tecnología y creemos que todos deberían tener acceso
-                  a
-                  los
-                  últimos
-                  avances y productos innovadores.
-               </p>
-            </div>
-            </p>
-         </div>
+
       </section>
    </main>
 
@@ -296,7 +300,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"></script>
-      
+
 </body>
 
 </html>
