--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                <img class="animate__animated animate__pulse" src="./img/nintendo.png" width="800px"
                   alt="Producto destacado">
             </div>
-            <h3 class="animate__animated animate__pulse">¡Nintendo Switch 10% OFF!</h3>
+            <h3 class="text-pop-up-top">¡Nintendo Switch 10% OFF!</h3>
             <br>
             <a class="boton" href="./pages/consolas.html">COMPRAR AHORA</a>
 
