--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -71,6 +71,7 @@
 
    <main>
       <section>
+         <div id="animated-thumbnails">
          <div class="grid_galeria">
             <div class="img_galeria"><img src="../img/mando_play.jpg" class="animate__animated animate__fadeInLeft"
                   alt="mando_play"></div>
@@ -91,6 +92,7 @@
             <div class="img_galeria imagen_final"><img src="../img/juegos_nintendo.jpg"
                   class="animate__animated animate__fadeInRight" alt="juegos_nintendo"></div>
          </div>
+      </div>
       </section>
    </main>
 
