--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -240,8 +240,8 @@
     </nav>
 
     <!-- TAMBIEN TE PUEDE INTERESAR -->
-
-    <main>
+    <section class="triangle"></section>
+    <main class="main-productos-abajo">
         <h2>Tambien te puede interesar</h2>
         <section class="productos">
             <div class="card">
