--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -242,7 +242,8 @@
 
     <!-- TAMBIEN TE PUEDE INTERESAR -->
 
-    <main>
+    <section class="triangle"></section>
+    <main class="main-productos-abajo">
         <h2>Tambien te puede interesar</h2>
         <div class="productos">
             <div class="card">
