--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -72,37 +72,43 @@
 
 
    <section>
-      <div class="titulo">
-         <H4>Quienes somos</H4>
-      </div>
-      <div class="imagen-nosotros">
-         <div class="parrafo">
-            "Nuestro equipo está formado por apasionados de los videojuegos que comprenden la importancia de
-            encontrar
-            el equipo adecuado para cada jugador. Ya seas un veterano experimentado o un novato curioso, estamos aquí
-            para ayudarte a descubrir dispositivos y juegos que se adapten a tu estilo. Nos enorgullece ofrecer un
-            servicio excepcional, asesoramiento experto y una amplia gama de productos que satisfacen todas las
-            necesidades de nuestros clientes. Mantenemos nuestro catálogo actualizado con las últimas novedades y
-            tecnologías para que siempre tengas acceso a las mejores opciones del mercado. Explora nuestra tienda en
-            línea y descubre la magia de los videojuegos con nosotros. Estamos emocionados de ser parte de tu viaje
-            de
-            entretenimiento y aventuras virtuales. Si tienes preguntas o necesitas asistencia, no dudes en contactar
-            a
-            nuestro amable equipo de atención al cliente"
+      <div class="nosotros">
+         <div class="titulo">
+            <H2>Quienes somos</H2>
          </div>
-         <img src="../img/nosotros.png" width="600px" alt="">
-         </div>
-         <section class="triangle"></section>
-         <main class="main-productos-abajo">
-            <h2>¿DONDE ESTAMOS?</h2>
-            <div class="mapa">
-               <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1381.8014956297045!2d-58.562529482106314!3d-34.54098640456464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcba05bbf0c2d1%3A0xc403f38bdf4fd791!2sBasquet%20Plaza%20Mitre!5e0!3m2!1ses-419!2sar!4v1688437616841!5m2!1ses-419!2sar"
-                  width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+         <div class="imagen-nosotros">
+            <img class="animate__animated animate__tada" src="../img/nosotros-img.png" width="700px"
+               alt="nosotros">
+            <div class="parrafo">
+               <p class="animate__animated animate__fadeInUp">Nuestro equipo está formado por apasionados de los
+                  videojuegos que comprenden la importancia de
+                  encontrar
+                  el equipo adecuado para cada jugador. <br><br>Ya seas un veterano experimentado o un novato curioso,
+                  estamos aquí
+                  para ayudarte a descubrir dispositivos y juegos que se adapten a tu estilo. <br><br>Nos enorgullece
+                  ofrecer un
+                  servicio excepcional, asesoramiento experto y una amplia gama de productos que satisfacen todas las
+                  necesidades de nuestros clientes. <br><br> Mantenemos nuestro catálogo actualizado con las últimas
+                  novedades y
+                  tecnologías para que siempre tengas acceso a las mejores opciones del mercado. <br><br>Si tienes
+                  preguntas o necesitas asistencia, no dudes en contactar a nuestro equipo de atención al cliente.</p>
+            </div>
 
-            </div>
-            </div>
+         </div>
+      </div>
+      <section class="triangle"></section>
+      <main class="main-productos-abajo">
+         <h2>¿DONDE ESTAMOS?</h2>
+
+         <div class="mapa">
+            <iframe
+               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1381.8014956297045!2d-58.562529482106314!3d-34.54098640456464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcba05bbf0c2d1%3A0xc403f38bdf4fd791!2sBasquet%20Plaza%20Mitre!5e0!3m2!1ses-419!2sar!4v1688437616841!5m2!1ses-419!2sar"
+               width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+               referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+         </div>
+         <p>Avenida Pirulo 1484, San Martin. Buenos Aires, Argentina.</p>
+         </div>
 
    </section>
 
